dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/Exotel_CTI__Exotel_Configuration__c.object-meta.xml
<CustomObject>
    <label>Exotel_Configuration</label>
    <nameField>
        <label>Exotel_Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exotel_Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>