dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Account_UID__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Account_UID__c</fullName>
    <description>Stores the corressponding unique account identifier for a Exotel Dashboard account</description>
    <label>Account_UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>