dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__API_Key__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__API_Key__c</fullName>
    <label>API_Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>