dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Default_Object__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Default_Object__c</fullName>
    <label>Default Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>