dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Mask_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Mask_Phone_Number__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mask Phone Number</label>
    <type>Checkbox</type>
</CustomField>