dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Object_Name_Fields__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Object_Name_Fields__c</fullName>
    <description>The Fields is used to store objectwise list of name fields</description>
    <label>Object Name Fields</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>