dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Object_Phone_Fields__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Object_Phone_Fields__c</fullName>
    <description>Object Field Names which contains Phone Number</description>
    <label>Object Phone Fields</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>