dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Phone_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Phone_Field_Names__c</fullName>
    <description>Field names which contains phone number</description>
    <label>Phone Field Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>