dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Record_Types__c</fullName>
    <description>Stores the record types for calling needs to supported in the order of priority</description>
    <label>Record Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>