dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Recording_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recording_URL</label>
    <type>Checkbox</type>
</CustomField>