dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/fields/Exotel_CTI__Region__c.field-meta.xml
<CustomField>
    <fullName>Exotel_CTI__Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>