dynamix/force-app/main/default/objects/Exotel_CTI__Exotel_Configuration__c/listViews/Exotel_CTI__All.listView-meta.xml
<ListView>
    <fullName>Exotel_CTI__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>